Remove all of React (Please never again)

--- a/src/pages/projects/fractal-trees.mdx
+++ b/src/pages/projects/fractal-trees.mdx
@@ -2,15 +2,14 @@
 ---
 
 import Layout from "../../layouts/home-layout.astro";
-import FractalTreeCanvas from "../../components/fractal-tree";
-import RotationCanvas from "../../components/rotation-points";
+import FractalTree from "../../components/fractal-tree.svelte";
+import Rotation from "../../components/rotation-points.svelte";
 
 <Layout title="Fractal Trees | Sergen Karaoglan" description="Build fractal trees with a interactive 3D fractal tree generator.">
 
 <article class="max-sm:mx-4 prose lg:prose-xl m-auto pt-16">
-March 23rd 2023
 
-# Fractal Trees
+# Fractal Tree
 
 ## What is a Fractal Tree
 
@@ -18,15 +17,15 @@ A treelike structure can be built [recursively](<https://en.wikipedia.org/wiki/R
 
 Below is a fractal tree that is intentionally left with only the first [mesh](https://en.wikipedia.org/wiki/Polygon_mesh) drawn. Increase the range of the slider to see how the tree is recursively built.
 
-<div className="m-auto sm:w-96 sm:h-96 py-10">
-  <FractalTreeCanvas client:visible initDepth={1} showDepth={true} />
+<div className="m-auto py-5">
+  <FractalTree showDepth={true} maxDepth={1} client:visible />
 </div>
 
 A convenient property of procedurally generated art is that you can tweak the parameters to customise the appearance with ease. The recursive depth here is limited at 10 but you can edit the code to go as far as your hardware can handle. Another property is the angle. Each branch (cylinder) splits at a fixed angle from the previous branch.
 Try the slider below to see how the angle changes the appearance of our fractal tree.
 
-<div className="m-auto sm:w-96 sm:h-96 py-10">
-  <FractalTreeCanvas client:visible initDepth={10} showAngle={true} />
+<div className="m-auto py-5">
+  <FractalTree showAngle={true} client:visible />
 </div>
 
 By now you probably have a good idea of what a fractal tree is, in which case we will now begin to build one using R3F.
@@ -41,16 +40,12 @@ We can start by first building our "Branch" component that returns a mesh with [
 
 We don't necessarily need to use a cylinder and you can experiment with other shapes such as a cube to possibly get interesting results but we will be sticking with a cylinder to most closely resemble a tree.
 
-<div className="m-auto sm:w-96 sm:h-96 py-10">
-  <FractalTreeCanvas client:visible initDepth={10} showShape={true} />
-</div>
-
 ### Rotating branches
 
 Next we would like to be able to rotate our mesh but first we need to get into a few specifics with R3F. For convenience, we would like to change the centre of rotation from the centre of the mesh to its endpoint. To achieve this in R3F it is common practice to nest a mesh within a group and use the group as the centre of rotation. We place our mesh above the origin of the group so the centre of rotation of the group meets the endpoint of our mesh. By interacting with the sliders you can see the difference in our desired centre of rotation (left) and the default centre of rotation (right).
 
-<div className="m-auto sm:w-96 sm:h-96 py-12">
-  <RotationCanvas client:visible />
+<div className="m-auto py-5">
+  <Rotation client:visible/>
 </div>
 
 The final Branch component we return is the following and contains the only mesh we need to build our tree.
@@ -123,8 +118,8 @@ Finally once we have reached the end of recursion we return the array of branche
 
 The mesh may be 3D but we are only rotating by the Z axis. We can extend the tree by adding two more branches that rotate by the X axis. You can orbit the tree with a cursor or touchscreen.
 
-<div className="m-auto sm:w-96 sm:h-96 py-10">
-  <FractalTreeCanvas client:visible is3D={true} initDepth={5} />
+<div className="m-auto py-5">
+  <FractalTree maxDepth = {7} is3D={true} client:visible />
 </div>
 
 ```js
