--- a/src/pages/projects/fractal-trees.mdx
+++ b/src/pages/projects/fractal-trees.mdx
@@ -18,7 +18,7 @@ A treelike structure can be built [recursively](<https://en.wikipedia.org/wiki/R
 Below is a fractal tree that is intentionally left with only the first [mesh](https://en.wikipedia.org/wiki/Polygon_mesh) drawn. Increase the range of the slider to see how the tree is recursively built.
 
 <div className="m-auto py-5">
-  <FractalTree showDepth={true} maxDepth={1} client:visible />
+  <FractalTree showDepth={true} curDepth={0} client:visible />
 </div>
 
 A convenient property of procedurally generated art is that you can tweak the parameters to customise the appearance with ease. The recursive depth here is limited at 10 but you can edit the code to go as far as your hardware can handle. Another property is the angle. Each branch (cylinder) splits at a fixed angle from the previous branch.
@@ -119,7 +119,7 @@ Finally once we have reached the end of recursion we return the array of branche
 The mesh may be 3D but we are only rotating by the Z axis. We can extend the tree by adding two more branches that rotate by the X axis. You can orbit the tree with a cursor or touchscreen.
 
 <div className="m-auto py-5">
-  <FractalTree maxDepth = {7} is3D={true} client:visible />
+  <FractalTree curDepth={7} maxDepth={7} is3D={true} client:visible />
 </div>
 
 ```js
