--- a/src/pages/projects/fractal-trees.mdx
+++ b/src/pages/projects/fractal-trees.mdx
@@ -1,7 +1,11 @@
-<script>
-import FractalTree from "$lib/fractal-tree.svelte";
-import Rotation from "$lib/rotation-points.svelte";
-</script>
+---
+---
+
+import Layout from "../../layouts/home-layout.astro";
+import FractalTree from "../../components/fractal-tree.svelte";
+import Rotation from "../../components/rotation-points.svelte";
+
+<Layout title="Fractal Trees | Sergen Karaoglan" description="Build fractal trees with a interactive 3D fractal tree generator.">
 
 <article class="max-sm:mx-4 prose lg:prose-xl m-auto pt-16">
 
@@ -9,19 +13,19 @@ import Rotation from "$lib/rotation-points.svelte";
 
 ## What is a Fractal Tree
 
-A treelike structure can be built [recursively](https://en.wikipedia.org/wiki/Recursion_(computer_science)) using only a single type of geometry and simple rules. This is known as a [fractal tree](https://en.wikipedia.org/wiki/Fractal_canopy) and by the end of this post you will learn how to build one with React Three Fiber (R3F) by walking through the process I took to build one. As you might have guessed, fractal trees purely serve as art but similar patterns can be found in nature besides trees from within our respiratory system to our blood veins showing that even our everyday lives are governed by these simple patterns. They are also a type of geometry known as a [fractal](https://en.wikipedia.org/wiki/Fractal).
+A treelike structure can be built [recursively](<https://en.wikipedia.org/wiki/Recursion_(computer_science)>) using only a single type of geometry and simple rules. This is known as a [fractal tree](https://en.wikipedia.org/wiki/Fractal_canopy) and by the end of this post you will learn how to build one with React Three Fiber (R3F) by walking through the process I took to build one. As you might have guessed, fractal trees purely serve as art but similar patterns can be found in nature besides trees from within our respiratory system to our blood veins showing that even our everyday lives are governed by these simple patterns. They are also a type of geometry known as a [fractal](https://en.wikipedia.org/wiki/Fractal).
 
 Below is a fractal tree that is intentionally left with only the first [mesh](https://en.wikipedia.org/wiki/Polygon_mesh) drawn. Increase the range of the slider to see how the tree is recursively built.
 
-<div class="m-auto py-5">
-  <FractalTree showDepth={true} curDepth={0} />
+<div className="m-auto py-5">
+  <FractalTree showDepth={true} curDepth={0} client:visible />
 </div>
 
 A convenient property of procedurally generated art is that you can tweak the parameters to customise the appearance with ease. The recursive depth here is limited at 10 but you can edit the code to go as far as your hardware can handle. Another property is the angle. Each branch (cylinder) splits at a fixed angle from the previous branch.
 Try the slider below to see how the angle changes the appearance of our fractal tree.
 
-<div class="m-auto py-5">
-  <FractalTree showAngle={true}  />
+<div className="m-auto py-5">
+  <FractalTree showAngle={true} client:visible />
 </div>
 
 By now you probably have a good idea of what a fractal tree is, in which case we will now begin to build one using R3F.
@@ -40,8 +44,8 @@ We don't necessarily need to use a cylinder and you can experiment with other sh
 
 Next we would like to be able to rotate our mesh but first we need to get into a few specifics with R3F. For convenience, we would like to change the centre of rotation from the centre of the mesh to its endpoint. To achieve this in R3F it is common practice to nest a mesh within a group and use the group as the centre of rotation. We place our mesh above the origin of the group so the centre of rotation of the group meets the endpoint of our mesh. By interacting with the sliders you can see the difference in our desired centre of rotation (left) and the default centre of rotation (right).
 
-<div class="m-auto py-5">
-  <Rotation />
+<div className="m-auto py-5">
+  <Rotation client:visible/>
 </div>
 
 The final Branch component we return is the following and contains the only mesh we need to build our tree.
@@ -114,8 +118,8 @@ Finally once we have reached the end of recursion we return the array of branche
 
 The mesh may be 3D but we are only rotating by the Z axis. We can extend the tree by adding two more branches that rotate by the X axis. You can orbit the tree with a cursor or touchscreen.
 
-<div class="m-auto py-5">
-  <FractalTree curDepth={7} maxDepth={7} is3D={true}  />
+<div className="m-auto py-5">
+  <FractalTree curDepth={7} maxDepth={7} is3D={true} client:visible />
 </div>
 
 ```js
@@ -138,3 +142,4 @@ You now know what a Fractal Tree is and saw how to build one in R3F. Procedural 
 
 [Modernescartes](https://www.moderndescartes.com/essays/plants/)
 </article>
+</Layout>
